--- a/Admin_Users.html
+++ b/Admin_Users.html
@@ -345,10 +345,7 @@
                 </td>
                 <td>
                   <div class="row-actions">
-                    <button class="row-action" title="Edit User" onclick='viewUserDetails("Jane Smith", "jane.smith@multiview.com", "JS", "linear-gradient(135deg, #667eea, #764ba2)", ["super-admin"])'><i class="fas fa-pen"></i></button>
-                    <button class="row-action" title="View Activity"><i class="fas fa-history"></i></button>
-                    <button class="row-action" title="Manage Roles"><i class="fas fa-key"></i></button>
-                    <button class="row-action danger" title="Deactivate"><i class="fas fa-ban"></i></button>
+                    <button class="row-action danger" title="Delete User"><i class="fas fa-trash"></i></button>
                   </div>
                 </td>
               </tr>
@@ -378,10 +375,7 @@
                 </td>
                 <td>
                   <div class="row-actions">
-                    <button class="row-action" title="Edit User" onclick='viewUserDetails("Alex Johnson", "alex.johnson@multiview.com", "AJ", "linear-gradient(135deg, #f093fb, #f5576c)", ["agency-admin"])'><i class="fas fa-pen"></i></button>
-                    <button class="row-action" title="View Activity"><i class="fas fa-history"></i></button>
-                    <button class="row-action" title="Manage Roles"><i class="fas fa-key"></i></button>
-                    <button class="row-action danger" title="Deactivate"><i class="fas fa-ban"></i></button>
+                    <button class="row-action danger" title="Delete User"><i class="fas fa-trash"></i></button>
                   </div>
                 </td>
               </tr>
@@ -411,10 +405,7 @@
                 </td>
                 <td>
                   <div class="row-actions">
-                    <button class="row-action" title="Edit User" onclick='viewUserDetails("Morgan Lee", "morgan.lee@acmeagency.com", "ML", "linear-gradient(135deg, #4facfe, #00f2fe)", ["standard-user"])'><i class="fas fa-pen"></i></button>
-                    <button class="row-action" title="Resend Invite"><i class="fas fa-redo"></i></button>
-                    <button class="row-action" title="View Pending Roles"><i class="fas fa-key"></i></button>
-                    <button class="row-action danger" title="Revoke Invite"><i class="fas fa-times"></i></button>
+                    <button class="row-action danger" title="Delete User"><i class="fas fa-trash"></i></button>
                   </div>
                 </td>
               </tr>
@@ -444,10 +435,7 @@
                 </td>
                 <td>
                   <div class="row-actions">
-                    <button class="row-action" title="Edit User" onclick='viewUserDetails("Taylor Patel", "taylor.patel@partnerco.com", "TP", "linear-gradient(135deg, #a8edea, #fed6e3)", ["read-only"])'><i class="fas fa-pen"></i></button>
-                    <button class="row-action" title="View Activity"><i class="fas fa-history"></i></button>
-                    <button class="row-action" title="Manage Roles"><i class="fas fa-key"></i></button>
-                    <button class="row-action danger" title="Deactivate"><i class="fas fa-ban"></i></button>
+                    <button class="row-action danger" title="Delete User"><i class="fas fa-trash"></i></button>
                   </div>
                 </td>
               </tr>
@@ -477,9 +465,7 @@
                 </td>
                 <td>
                   <div class="row-actions">
-                    <button class="row-action" title="View User" onclick='viewUserDetails("Chris Brown", "chris.brown@formerco.com", "CB", "linear-gradient(135deg, #ffecd2, #fcb69f)", ["standard-user"])'><i class="fas fa-eye"></i></button>
-                    <button class="row-action" title="Reactivate"><i class="fas fa-undo"></i></button>
-                    <button class="row-action" title="Delete"><i class="fas fa-trash"></i></button>
+                    <button class="row-action danger" title="Delete User"><i class="fas fa-trash"></i></button>
                   </div>
                 </td>
               </tr>
