--- a/index.html
+++ b/index.html
@@ -786,7 +786,7 @@
                     
                     <div>
                       <label class="block text-sm font-medium text-gray-700 mb-2">Name</label>
-                      <input type="text" id="dspName" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent" placeholder="Enter DSP name">
+                      <input type="text" id="dspName" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent" placeholder="Enter Advertiser Name">
                     </div>
 
                     <div>
@@ -885,7 +885,7 @@
                     <div>
                       <label class="block text-sm font-medium text-gray-700 mb-2">Conversion</label>
                       <div class="flex items-center gap-2">
-                        <input type="number" id="dspDedupConversion" class="flex-1 px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent" placeholder="7">
+                        <input type="number" id="dspDedupConversion" class="flex-1 px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent" placeholder="60">
                         <span class="text-sm text-gray-600 w-20">Seconds</span>
                       </div>
                     </div>
