--- a/Admin_User_Activity_Logs.html
+++ b/Admin_User_Activity_Logs.html
@@ -18,8 +18,7 @@
         .sidebar { width: 256px; background: white; padding: 16px; position: fixed; height: 100vh; overflow-y: auto; border-right: 1px solid #e5e7eb; top: 56px; }
         .logo-section { padding-top: 16px; padding-bottom: 16px; border-bottom: 1px solid #e5e7eb; margin-bottom: 16px; }
         .logo { display: flex; align-items: center; gap: 12px; color: #1f2937; font-size: 18px; font-weight: 600; }
-        .nav-menu { }
-        .nav-group { margin-bottom: 20px; }
+        .nav-group { margin-bottom: 24px; }
         .nav-group-title { color: #6b7280; font-size: 12px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em; padding: 0 4px 8px; }
         .nav-item { display: flex; align-items: center; gap: 8px; padding: 8px 4px; color: #374151; text-decoration: none; border-radius: 6px; margin-bottom: 2px; transition: all 0.2s ease; font-weight: 400; font-size: 14px; }
         .nav-item:hover { background: #eff6ff; color: #1f2937; }
@@ -123,6 +122,7 @@
           <a href="Admin_Users.html" class="nav-item"><i class="fas fa-users"></i><span>Users</span></a>
           <a href="Admin_Roles_Permissions.html" class="nav-item"><i class="fas fa-user-tag"></i><span>Roles & Permissions</span></a>
           <a href="Admin_User_Activity_Logs.html" class="nav-item active"><i class="fas fa-history"></i><span>User Activity Logs</span></a>
+          <a href="Admin_Configuration_Console.html" class="nav-item"><i class="fas fa-cogs"></i><span>Configuration Console</span></a>
         </div>
 
         
