--- a/CampaignsAdGroup.html
+++ b/CampaignsAdGroup.html
@@ -713,8 +713,11 @@
                   class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent"
                 >
                   <option value="">-- Select --</option>
-                  <option value="Active">Active</option>
-                  <option value="Inactive">Inactive</option>
+                  <option value="association affinity">Association Affinity</option>
+                  <option value="audio">Audio</option>
+                  <option value="display">Display</option>
+                  <option value="social">Social</option>
+                  <option value="video">Video</option>
                 </select>
               </div>
 
@@ -726,8 +729,10 @@
                   class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent"
                 >
                   <option value="">-- Select --</option>
-                  <option value="Active">Active</option>
-                  <option value="Inactive">Inactive</option>
+                  <option value="persona">Persona</option>
+                  <option value="keyword">Keyword</option>
+                  <option value="site retargeting">Site Retargeting</option>
+                  <option value="data onboarding">Data Onboarding</option>
                 </select>
               </div>
 
