hyperlinks to the reporting and delivery ID

--- a/CampaignsAdGroup.html
+++ b/CampaignsAdGroup.html
@@ -376,11 +376,11 @@
               <div class="text-right">
                 <div class="flex justify-end gap-2">
                   <span class="text-sm font-semibold text-gray-600">Delivery ID:</span>
-                  <span id="campaignDeliveryId" class="text-sm text-gray-500 w-40 text-left">—</span>
+                  <a id="campaignDeliveryId" href="https://www.thetradedesk.com/" target="_blank" class="text-sm text-blue-600 hover:text-blue-800 hover:underline w-40 text-left">—</a>
                 </div>
                 <div class="flex justify-end gap-2">
                   <span class="text-sm font-semibold text-gray-600">Reporting ID:</span>
-                  <span id="campaignReportingId" class="text-sm text-gray-500 w-40 text-left">—</span>
+                  <a id="campaignReportingId" href="https://campaignmanager.google.com/" target="_blank" class="text-sm text-blue-600 hover:text-blue-800 hover:underline w-40 text-left">—</a>
                 </div>
                 <div class="flex justify-end gap-2">
                   <span class="text-sm font-semibold text-gray-600">ID:</span>
