--- a/WFAdvertiserConnections.html
+++ b/WFAdvertiserConnections.html
@@ -299,11 +299,11 @@
               <div class="text-right">
                 <div class="flex justify-end gap-2">
                   <span class="text-sm font-semibold text-gray-600">Delivery ID:</span>
-                  <span data-bind="adv.deliveryId" class="text-sm text-gray-500 w-28 text-left">—</span>
+                  <a href="https://www.thetradedesk.com/" target="_blank" class="text-sm text-blue-600 hover:text-blue-800 hover:underline w-28 text-left" data-bind="adv.deliveryId">—</a>
                 </div>
                 <div class="flex justify-end gap-2">
                   <span class="text-sm font-semibold text-gray-600">Reporting ID:</span>
-                  <span data-bind="adv.reportingId" class="text-sm text-gray-500 w-28 text-left">—</span>
+                  <a href="https://campaignmanager.google.com/" target="_blank" class="text-sm text-blue-600 hover:text-blue-800 hover:underline w-28 text-left" data-bind="adv.reportingId">—</a>
                 </div>
                 <div class="flex justify-end gap-2">
                   <span class="text-sm font-semibold text-gray-600">ID:</span>
