--- a/Admin_Users.html
+++ b/Admin_Users.html
@@ -111,7 +111,7 @@
         .row-action.danger:hover { background: #fee2e2; color: #dc2626; }
 
         /* Checkbox */
-        .checkbox { width: 18px; height: 18px; border: 2px solid #cbd5e1; border-radius: 4px; cursor: pointer; transition: all 0.15s ease; appearance: none; }
+        .checkbox { width: 18px; height: 18px; min-width: 18px; min-height: 18px; max-width: 18px; max-height: 18px; flex-shrink: 0; border: 2px solid #cbd5e1; border-radius: 4px; cursor: pointer; transition: all 0.15s ease; appearance: none; -webkit-appearance: none; -moz-appearance: none; }
         .checkbox:checked { background: #005EB8; border-color: #005EB8; background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12.207 4.793a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0l-2-2a1 1 0 011.414-1.414L6.5 9.086l4.293-4.293a1 1 0 011.414 0z'/%3E%3C/svg%3E"); background-size: 12px; background-position: center; background-repeat: no-repeat; }
 
         /* Pagination */
@@ -126,7 +126,7 @@
         /* Modal */
         .modal-overlay { position: fixed; inset: 0; background: rgba(15, 23, 42, 0.6); display: none; align-items: center; justify-content: center; z-index: 1000; backdrop-filter: blur(4px); }
         .modal-overlay.active { display: flex; }
-        .modal { background: white; border-radius: 16px; width: 100%; max-width: 520px; max-height: 90vh; overflow: hidden; box-shadow: 0 25px 50px rgba(0,0,0,0.25); animation: modalIn 0.2s ease; }
+        .modal { background: white; border-radius: 16px; width: 100%; max-width: 650px; max-height: 90vh; overflow: hidden; box-shadow: 0 25px 50px rgba(0,0,0,0.25); animation: modalIn 0.2s ease; }
         @keyframes modalIn { from { opacity: 0; transform: scale(0.95) translateY(10px); } to { opacity: 1; transform: scale(1) translateY(0); } }
         .modal-header { padding: 20px 24px; border-bottom: 1px solid #e2e8f0; display: flex; justify-content: space-between; align-items: center; }
         .modal-header h2 { font-size: 18px; font-weight: 600; color: #0f172a; }
@@ -483,38 +483,45 @@
           <div class="form-group"><label>Last Name</label><input type="text" placeholder="Enter last name"></div>
         </div>
         <div class="form-group"><label>Email Address</label><input type="email" placeholder="user@example.com"></div>
-        <div class="form-row">
-          <div class="form-group">
-            <label>Role</label>
-            <select>
-              <option>Select role...</option>
-              <option>Super Admin</option>
-              <option>Agency Admin</option>
-              <option>Standard User</option>
-              <option>Read Only</option>
-            </select>
-          </div>
-          <div class="form-group">
-            <label>User Type</label>
-            <select>
-              <option>Internal</option>
-              <option>Agency</option>
-            </select>
-          </div>
-        </div>
         <div class="form-group">
-          <label>Agency (if applicable)</label>
-          <select>
-            <option>None - Internal User</option>
-            <option>Acme Agency</option>
-            <option>Partner Co</option>
-            <option>Media Group LLC</option>
-          </select>
-        </div>
-        <div class="form-group">
-          <label style="display:flex; align-items:center; gap:8px; cursor:pointer;">
-            <input type="checkbox" class="checkbox" checked> Send welcome email with login instructions
-          </label>
+          <label>Roles</label>
+          <div style="display: flex; flex-direction: column; gap: 10px; margin-top: 8px;">
+            <label style="display: flex; align-items: center; gap: 10px; cursor: pointer;">
+              <input type="checkbox" class="checkbox" value="super-admin">
+              <div>
+                <span style="font-weight: 500; color: #0f172a; font-size: 14px;">Super Admin</span>
+                <span style="color: #64748b; font-size: 12px; margin-left: 8px;">– Full system access with all permissions</span>
+              </div>
+            </label>
+            <label style="display: flex; align-items: center; gap: 10px; cursor: pointer;">
+              <input type="checkbox" class="checkbox" value="agency-admin">
+              <div>
+                <span style="font-weight: 500; color: #0f172a; font-size: 14px;">Agency Admin</span>
+                <span style="color: #64748b; font-size: 12px; margin-left: 8px;">– Manage agency users and campaigns</span>
+              </div>
+            </label>
+            <label style="display: flex; align-items: center; gap: 10px; cursor: pointer;">
+              <input type="checkbox" class="checkbox" value="campaign-manager">
+              <div>
+                <span style="font-weight: 500; color: #0f172a; font-size: 14px;">Campaign Manager</span>
+                <span style="color: #64748b; font-size: 12px; margin-left: 8px;">– Create and manage advertising campaigns</span>
+              </div>
+            </label>
+            <label style="display: flex; align-items: center; gap: 10px; cursor: pointer;">
+              <input type="checkbox" class="checkbox" value="standard-user">
+              <div>
+                <span style="font-weight: 500; color: #0f172a; font-size: 14px;">Standard User</span>
+                <span style="color: #64748b; font-size: 12px; margin-left: 8px;">– View and edit assigned campaigns</span>
+              </div>
+            </label>
+            <label style="display: flex; align-items: center; gap: 10px; cursor: pointer;">
+              <input type="checkbox" class="checkbox" value="read-only">
+              <div>
+                <span style="font-weight: 500; color: #0f172a; font-size: 14px;">Read Only</span>
+                <span style="color: #64748b; font-size: 12px; margin-left: 8px;">– View-only access to campaigns and reports</span>
+              </div>
+            </label>
+          </div>
         </div>
       </div>
       <div class="modal-footer">
