remove sales order nav link from advertiser details, connections, campaigns, and ad group pages

--- a/WFAdvertiserConnections.html
+++ b/WFAdvertiserConnections.html
@@ -253,18 +253,18 @@
               <span data-link-label>Overview</span>
             </a>
           </li>
-          <li>
+          <!-- <li>
             <a href="./AdvertiserSalesOrder.html" data-nav-link
                class="flex items-center px-1 py-2 text-sm text-gray-700 hover:bg-blue-50 rounded-md">
               <img src="./assets/svgs/SalesOrderExpense.svg" alt="Sales Orders" class="w-6 h-6 mr-2" />
               <span data-link-label>Sales Orders</span>
             </a>
-          </li>
+          </li> -->
           <li>
             <a href="./WFAdvertiserConnections.html" data-nav-link
                class="flex items-center px-1 py-2 text-sm font-medium text-blue-700 bg-blue-50 rounded-md">
               <img src="./assets/svgs/Blueprint.svg" alt="Connections" class="w-6 h-6 mr-2" />
-              <span data-link-label>Connections (P2)</span>
+              <span data-link-label>Connections</span>
             </a>
           </li>
           <li>
