Updated the edit and delete on advertiser overview, changed details to overview, added ellipsis

--- a/AdGroupDetails.html
+++ b/AdGroupDetails.html
@@ -391,7 +391,7 @@
                       <thead style="background-color: #dbeafe;">
                         <tr>
                           <th colspan="2" class="px-6 py-2 text-left text-sm font-medium text-blue-900 uppercase tracking-wider">
-                            DSP FIELDS
+                            DSP FIELDS • The Trade Desk
                           </th>
                         </tr>
                       </thead>
@@ -573,7 +573,7 @@
                       <thead style="background-color: #d1fae5;">
                         <tr>
                           <th colspan="2" class="px-6 py-2 text-left text-sm font-medium text-green-900 uppercase tracking-wider">
-                            AD SERVER FIELDS
+                            AD SERVER FIELDS • Google Campaign Manager
                           </th>
                         </tr>
                       </thead>
